# music-player

./: README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: final_dialog.rs  fixed_dialog.rs  global_player.rs  lib.rs  lib.rs.bak  lib.rs.bak3  lib.rs.bak4  lib.rs.fixed  lib.rs.new  open_audio_files.rs  player_fixed.rs  player_safe.rs
src/components/: LyricsDisplay.vue  NowPlaying.vue  PlayModeControl.vue  PlaybackModeControl.vue  PlayerControls.vue  Playlist.vue  StarWarsTitles.vue  VideoPlayer.vue
src/stores/: player.ts
