[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rodio = "0.17"
symphonia = { version = "0.5.3", features = ["aac", "mp3", "isomp4", "alac"] }
id3 = "1.7"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
rand = "0.8"
image = "0.24"
base64 = "0.21"
# 添加对FLAC和OGG格式的元数据支持
metaflac = "0.2"
lewton = "0.10"  # OGG Vorbis 解码库
ogg = "0.8"     # OGG 容器格式解析
# 添加更强大的通用音频元数据库
lofty = "0.18"  # 支持几乎所有音频格式的元数据读取
audiotags = "0.5"  # 另一个强大的音频标签库
# 添加编码支持库
encoding_rs = "0.8"  # 支持多种字符编码，包括GBK、GB2312等中文编码

